# focalize

./: 404.html  CHANGELOG.md  LICENSE.md  Makefile  README.md  index.html  objects.inv  pyproject.toml  sitemap.xml
docs/: mkdocs.yaml
docs/source/: index.md  reference.md
examples/: basic.py  differences.py  full.py
focalize/: __init__.py  main.py
reference/: index.html
search/: search_index.json
